# django-tree

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  run_benchmark.py  run_tests.py  runtests.py  settings.py  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
benchmark/: base.py  models.py  requirements.txt  router.py  settings.py  utils.py
benchmark/migrations/: 0001_initial.py  0002_treenodeplace.py  0003_treequeriesplace.py
benchmark/results/: data.csv  results.md  results.rst  stats.html
tests/: base.py  models.py  requirements.txt  settings.py
tests/migrations/: 0001_initial.py  0002_add_tmp_model.py  0002_test_operations.py  0003_test_migrations.py  0004_remove_person_person_path_length_index_and_more.py  0004_tree_test_models.py  0005_remove_person_person_path_parent_index_and_more.py  0005_tree_test_models.py  0006_remove_person_person_path_parent_index_and_more.py
tree/: __init__.py  apps.py  fields.py  forms.py  functions.py  lookups.py  maintenance.py  models.py  operations.py  query.py  signals.py  transforms.py  types.py
tree/migrations/: 0001_initial.py  0002_remove_old_functions.py  0003_tree_functions.py
tree/sql/: __init__.py  base.py  helpers.py  oracle.py  postgresql.py
tree/tests/: __init__.py  base.py  models.py
tree/tests/migrations/: 0001_initial.py
