[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tree"
version = "0.6.2"
authors = [
  {name = "Bertrand Bordage", email = "bordage.bertrand@gmail.com"},
]
description = "Fast and easy tree structures."
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "Django>=3.2",
]
license = "BSD-2-Clause"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/BertrandBordage/django-tree"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.0.18",
    "mypy>=1.8",
    "django-stubs>=4.2",
]
benchmark = [
    "django-mptt>=0.14.0",
    "django-treebeard>=4.6.0",
    "matplotlib>=3.3.4",
    "pandas>=0.25.3",
    "tqdm>=4.64.1",
]

[tool.setuptools.package-data]
tree = ["py.typed"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
files = ["tree"]
exclude = "tree/migrations/"

[[tool.mypy.overrides]]
module = ["psycopg2.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"
