[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tree"
version = "0.6.2"
authors = [
  {name = "Bertrand Bordage", email = "bordage.bertrand@gmail.com"},
]
description = "Fast and easy tree structures."
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "Django>=4.2",
]
license = "BSD-2-Clause"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/BertrandBordage/django-tree"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.0.18",
    "mypy>=1.8",
    "django-stubs>=4.2",
]
benchmark = [
    "django-mptt>=0.16.0",
    "django-treebeard>=5.3.0",
    "django-treenode>=0.24.0",
    "django-tree-queries>=0.24.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.package-data]
tree = ["py.typed"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
files = ["tree"]
exclude = "tree/migrations/"

[[tool.mypy.overrides]]
module = ["psycopg2.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"
